--- a/index.html
+++ b/index.html
@@ -13,21 +13,20 @@
             border: 2px solid #4A90E2;
             color: #003366;
         }
-     
+        button {
+            padding: 10px 20px;
+            border-radius: 25px;
+            border: none;
+            background-color: #4A90E2; 
+            color: white; 
+            cursor: pointer;
+        }
 
             button:hover {
                 background-color: #357ABD;
             }
 
-        .container {
-            width: 350px;
-            background: #f8f8f8;
-            padding: 20px;
-            border-radius: 15px;
-            margin: auto;
-            margin-top: 50px;
-            box-shadow: 0 0 10px #ccc;
-        }
+       
     </style>
 </head>
 <body>
