--- a/index.html
+++ b/index.html
@@ -22,11 +22,17 @@
             cursor: pointer;
         }
 
-            button:hover {
-                background-color: #357ABD;
-            }
+            
 
-       
+        .container {
+            width: 350px;
+            background: #f8f8f8;
+            padding: 20px;
+            border-radius: 15px;
+            margin: auto;
+            margin-top: 50px;
+            box-shadow: 0 0 10px #ccc;
+        }
     </style>
 </head>
 <body>
